load("//bazel:app_chart.bzl", "app_chart")
load("//bazel:app.bzl", "app")

app_chart(
    name = "token-vendor-cloud",
    images = {
        "token-vendor-go": "//src/go/cmd/token-vendor:token-vendor-go",
        "token-vendor": "//src/java/com/cloudrobotics/tokenvendor:token_vendor",
    },
)

app(
    name = "token-vendor",
    charts = [
        ":token-vendor-cloud",
    ],
    visibility = ["//visibility:public"],
)
