load("//bazel:app.bzl", "app")
load("//bazel:app_chart.bzl", "app_chart")

app_chart(
    name = "token-vendor-cloud",
    images = {
        "token-vendor-go": "//src/go/cmd/token-vendor:token-vendor-image",
    },
)

app(
    name = "token-vendor",
    charts = [
        ":token-vendor-cloud",
    ],
    visibility = ["//visibility:public"],
)
