load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "bazel-bin",
    srcs = [
        "//src/app_charts/base:base-cloud",
        "//src/app_charts/platform-apps:platform-apps-cloud",
        "//src/go/cmd/setup-robot:setup-robot-image.digest",
        "//src/proto/map:proto_descriptor",
    ],
    mode = "644",
    package_dir = "/bazel-bin",
    strip_prefix = "/",
)

pkg_tar(
    name = "files",
    srcs = [
        "//:config.sh.tmpl",
        "//src/bootstrap/cloud/terraform",
    ],
    mode = "644",
    strip_prefix = "/",
)

pkg_tar(
    name = "scripts",
    srcs = [
        "//:deploy.sh",
        "//scripts:common.sh",
        "//scripts:include-config.sh",
        "//scripts:set-config.sh",
        "//scripts:show-resource-usage.sh",
        "//src/bootstrap/robot:install_k8s_on_robot.sh",
        "//src/bootstrap/robot:setup_robot.sh",
    ],
    mode = "755",
    strip_prefix = "/",
)

pkg_tar(
    name = "binary_tools",
    srcs = [
        "//src/go/cmd/synk",
        "@hashicorp_terraform//:terraform",
        "@kubernetes_helm//:helm",
    ],
    mode = "755",
    package_dir = "/bin",
)

pkg_tar(
    name = "third_party",
    srcs = [
        "//third_party/cert-manager",
    ],
    mode = "755",
    strip_prefix = "/",
)

pkg_tar(
    name = "crc-binary",
    srcs = [
        "INSTALL_FROM_BINARY",
    ],
    extension = "tar.gz",
    mode = "644",
    package_dir = "/cloud-robotics-core",
    deps = [
        ":bazel-bin",
        ":binary_tools",
        ":files",
        ":scripts",
        ":third_party",
    ],
)
