load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

genrule(
    name = "setup-robot-digest",
    srcs = ["//src/go/cmd/setup-robot:setup-robot-image"],
    outs = ["setup-robot.digest"],
    cmd = "$(JQ_BIN) -r '.manifests[0].digest' $(location //src/go/cmd/setup-robot:setup-robot-image)/index.json > $@",
    toolchains = ["@jq_toolchains//:resolved_toolchain"],
)

pkg_tar(
    name = "bazel-bin",
    srcs = [
        ":setup-robot-digest",
        "//src/app_charts/base:base-cloud",
        "//src/app_charts/platform-apps:platform-apps-cloud",
    ],
    mode = "644",
    package_dir = "/bazel-bin",
    strip_prefix = "/",
)

pkg_tar(
    name = "files",
    srcs = [
        "//:config.sh.tmpl",
        "//src/bootstrap/cloud/terraform",
    ],
    mode = "644",
    strip_prefix = "/",
)

pkg_tar(
    name = "scripts",
    srcs = [
        "//:deploy.sh",
        "//scripts:common.sh",
        "//scripts:include-config.sh",
        "//scripts:set-config.sh",
        "//src/bootstrap/robot:setup_robot.sh",
    ],
    mode = "755",
    strip_prefix = "/",
)

pkg_tar(
    name = "binary_tools",
    srcs = [
        "//src/go/cmd/synk",
        "//src/go/cmd/token-vendor:token-vendor-app",
        "@hashicorp_terraform//:terraform",
        "@kubernetes_helm//:helm",
    ],
    mode = "755",
    package_dir = "/bin",
)

pkg_tar(
    name = "crc-binary",
    srcs = [
        "INSTALL_FROM_BINARY",
    ],
    extension = "tar.gz",
    mode = "644",
    package_dir = "/cloud-robotics-core",
    deps = [
        ":bazel-bin",
        ":binary_tools",
        ":files",
        ":scripts",
    ],
)
