load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

genrule(
    name = "setup-robot-digest",
    srcs = ["//src/go/cmd/setup-robot:setup-robot-image.digest"],
    outs = ["setup-robot.digest"],
    cmd = "cp $(location //src/go/cmd/setup-robot:setup-robot-image.digest) $@",
)

pkg_files(
    name = "bazel-bin-files",
    srcs = [
        ":setup-robot-digest",
        "//src/app_charts/base:base-cloud",
        "//src/app_charts/platform-apps:platform-apps-cloud",
    ],
    attributes = pkg_attributes(mode = "0644"),
    prefix = "bazel-bin",
    strip_prefix = strip_prefix.from_root(""),
)

pkg_files(
    name = "install-from-binary",
    srcs = ["INSTALL_FROM_BINARY"],
    attributes = pkg_attributes(mode = "0644"),
    strip_prefix = strip_prefix.files_only(),
)

pkg_files(
    name = "core-files-644",
    srcs = [
        "//:config.sh.tmpl",
        "//src/bootstrap/cloud/terraform",
        "//src/terraform/modules/cloud",
    ],
    attributes = pkg_attributes(mode = "0644"),
    strip_prefix = strip_prefix.from_root(""),
)

pkg_files(
    name = "core-files-755",
    srcs = [
        "//:deploy.sh",
        "//scripts:common.sh",
        "//scripts:config.sh",
        "//scripts:include-config.sh",
        "//scripts:set-config.sh",
        "//src/bootstrap/robot:setup_robot.sh",
    ],
    attributes = pkg_attributes(mode = "0755"),
    strip_prefix = strip_prefix.from_root(""),
)

pkg_files(
    name = "binary-tools-files",
    srcs = [
        "//src/go/cmd/synk",
        "//src/go/cmd/token-vendor:token-vendor-app",
        "@hashicorp_terraform//:terraform",
        "@kubernetes_helm//:helm",
    ],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "bin",
    strip_prefix = strip_prefix.files_only(),
)

pkg_tar(
    name = "crc-binary",
    srcs = [
        ":bazel-bin-files",
        ":binary-tools-files",
        ":core-files-644",
        ":core-files-755",
        ":install-from-binary",
    ],
    extension = "tar.gz",
    package_dir = "/cloud-robotics-core",
)
