package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("@io_bazel_rules_docker//python:image.bzl", "py_image")

py_image(
    name = "ros_adapter",
    srcs = [
        "main.py",
    ],
    base = "//src/docker:python27",
    main = "main.py",
    deps = [
        "//src/python/ros_adapter",
        "//src/python/rosenv",
    ],
)

container_test(
    name = "ros_adapter_test",
    configs = ["ros_adapter_test.yaml"],
    image = ":ros_adapter",
    tags = ["requires-docker"],
)
