package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//python:image.bzl", "py_image")

py_image(
    name = "ros_websocket",
    srcs = ["ros_websocket.py"],
    base = "//src/docker/ros:base",
    data = [
        ":websocket.launch",
        "@com_github_robotwebtools_rosbridge_suite//:rosapi_node",
        "@com_github_robotwebtools_rosbridge_suite//:rosbridge_server_files",
        "@com_github_robotwebtools_rosbridge_suite//:rosbridge_websocket",
        "@com_github_robotwebtools_tf2_web_republisher//:tf2_web_republisher",
    ],
    main = "ros_websocket.py",
    deps = [
        "//src/python/rosenv",
        "@com_github_robotwebtools_rosbridge_suite//:rosapi_msgs_py",
        "@com_github_robotwebtools_tf2_web_republisher//:msgs_py",
        "@com_github_ros_common_msgs//:actionlib_msgs_py",
        "@com_github_ros_common_msgs//:nav_msgs_py",
        "@com_github_ros_common_msgs//:sensor_msgs_py",
        "@com_github_ros_planning_navigation_msgs//:move_base_msgs_py",
        "@com_github_ros_ros_comm//:roslaunch",
    ],
)
