load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    size = "large",
    timeout = "long",
    srcs = ["k8s_integration_test.go"],
    tags = ["external"],
    deps = [
        "//src/go/pkg/apis/apps/v1alpha1:go_default_library",
        "//src/go/pkg/kubeutils:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
    ],
)

sh_test(
    name = "relay_test",
    srcs = ["relay_test.sh"],
    data = [
        "@kubernetes_helm//:helm",
    ],
    # TODO(b/219953603): in 2 out of 25 runs we get a timeout from the relay
    flaky = True,
    tags = ["external"],
)
