load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# http relay api

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "http_over_rpc_proto",
    srcs = ["http_over_rpc.proto"],
)

go_proto_library(
    name = "http_over_rpc_proto_go",
    importpath = "github.com/googlecloudrobotics/core/src/proto/http-relay",
    proto = ":http_relay_proto",
)

proto_library(
    name = "http_relay_proto",
    srcs = ["http_over_rpc.proto"],
)

go_library(
    name = "go_default_library",
    srcs = ["unused.go"],
    embed = [":http_over_rpc_proto_go"],
    importpath = "github.com/googlecloudrobotics/core/src/proto/http-relay",
)
